--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <body>
     <!--      ddfg<include src="./partials/example.html"></include> -->
     <svg class="" width="150" height="80">
-      <use href="images/icons.svg#icon-rito-logo"></use>
+      <use href="./images/icons.svg#icon-rito-logo"></use>
     </svg>
   </body>
 </html>
