--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,8 @@
     <svg class="" width="150" height="80">
       <use href="./images/icons.svg#icon-rito-logo"></use>
     </svg>
+
+    <p>Hello Valorant</p>
+    <a href="#" class="button">Download</a>
   </body>
 </html>
