--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,11 @@
     </svg>
 
     <p>Hello Valorant</p>
-    <a href="#" class="button">Download</a>
+    <a href="#" class="button"
+      >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rem voluptatem
+      enim facilis cum repudiandae magni quibusdam recusandae ut ducimus quidem.
+      Doloribus molestiae vero provident? Animi excepturi illum ipsam magni
+      nam!</a
+    >
   </body>
 </html>
