--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,12 @@
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!--      ddfg<include src="./partials/example.html"></include> -->
-    <svg class="" width="150" height="80">
-      <use href="./images/icons.svg#icon-rito-logo"></use>
-    </svg>
+    <include src="./partials/header.html"></include>
+    <include src="./partials/hero.html"></include>
+    <include src="./partials/about.html"></include>
+    <include src="./partials/agents.html"></include>
+    <include src="./partials/maps.html"></include>
+    <include src="./partials/guns.html"></include>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
