decoration script done

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,6 @@
     <include src="./partials/maps.html"></include>
     <include src="./partials/guns.html"></include>
     <include src="./partials/footer.html"></include>
-    <script src="./index.js" type="module"></script>
+    <script src="./decoration.js" type="module"></script>
   </body>
 </html>
