--- a/src/index.html
+++ b/src/index.html
@@ -16,5 +16,6 @@
     <include src="./partials/guns.html"></include>
     <include src="./partials/footer.html"></include>
     <script src="./decoration.js" type="module"></script>
+    <script src="./cutting.js" type="module"></script>
   </body>
 </html>
